# projetoHaskellFatec

./: .gitignore  CHANGELOG.md  Dockerfile  cabal.project  meu-servant-api.cabal
.agents/scripts/: checklist.py  verify_all.py
.agents/skills/lint-and-validate/scripts/: lint_runner.py
.agents/skills/seo-fundamentals/scripts/: seo_checker.py
.agents/skills/testing-patterns/scripts/: test_runner.py
app/: Crypto.hs  DatabaseStore.hs  Handlers.hs  JsonStore.hs  LocalStore.hs  Main.hs  UserTypes.hs  WalletService.hs  WalletStore.hs  WalletTypes.hs
client/: index.html  package-lock.json  package.json
client/src/: App.css  App.jsx
client/src/components/: ImportWalletModal.jsx  ImportWatchOnlyModal.jsx  MnemonicModal.jsx  WalletCard.jsx  WalletDrawer.jsx
client/src/contexts/: AuthContext.jsx
client/src/pages/: ContactsPage.jsx  LoginPage.jsx  RegisterPage.jsx  SettingsPage.jsx  TransferPage.jsx  WalletPage.jsx
client/src/services/: walletApi.js
scripts/: generate_wallet.py  import_wallet.py  send_transaction.py
test/: CryptoSpec.hs  P2PSpec.hs  Spec.hs
