cabal-version:      3.0
name:               meu-servant-api
version:            0.1.0.0
author:             Guilherme
maintainer:         zanettig520@gmail.com
license:            NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

executable meu-servant-api
    import:           warnings
    main-is:          Main.hs
    ghc-options:      -Wall -threaded -rtsopts -with-rtsopts=-N
    other-modules:
        Crypto
        UserTypes
        WalletTypes
        WalletStore
        LocalStore
        WalletService
        Handlers
        DatabaseStore
    hs-source-dirs:   app
    build-depends:
        base          >=4.16 && <5,
        servant,
        servant-server,
        warp,
        aeson,
        text,
        bytestring,
        wai-app-static,
        http-media,
        file-embed,
        wai,
        wai-app-static,
        uuid,
        http-conduit,
        time,
        process,
        directory,
        stm,
        containers,
        cryptonite,
        memory,
        base64-bytestring,
        direct-sqlite,
        postgresql-simple,
        random
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeOperators
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass

test-suite meu-servant-api-test
    import:       warnings
    type:         exitcode-stdio-1.0
    main-is:      Spec.hs
    other-modules:
        CryptoSpec
        P2PSpec
    hs-source-dirs:   test, app
    build-depends:
        base          >=4.16 && <5,
        hspec,
        servant,
        servant-server,
        aeson,
        text,
        bytestring,
        uuid,
        time,
        cryptonite,
        memory,
        base64-bytestring,
        direct-sqlite,
        random,
        stm,
        containers
    default-language: GHC2021
    default-extensions:
        DataKinds
        TypeOperators
        OverloadedStrings
        DeriveGeneric
        DeriveAnyClass
